@@ -10,6 +10,12 @@ Major changes since man-db 2.8.0:
 
 	* Fix manconv execution under seccomp when man is installed setuid.
 
+	Improvements:
+	-------------
+
+	* configure now has a --without-libseccomp option to disable the use
+	  of seccomp even if the library is available.
+
 man-db 2.8.0 (4 February 2018)
 ==============================
 
